@@ -1,3 +1,11 @@
+2008-02-13  Ross Burton  <ross@openedhand.com>
+
+	* applets/windowselector/windowselector.c:
+	Use icons from the icon theme.
+	
+	* applets/windowselector/mb-applet-windowselector.png:
+	Delete.
+
 2008-02-12  Ross Burton  <ross@openedhand.com>
 
 	* matchbox-panel/mb-panel-scaling-image.c:
